# CustomLinker

./: Android.mk  Encryption.c  README.md  Utils.c  Utils.h  XorUtils.c  XorUtils.h  elf.h  gbdlfcn.h  linker.c  linker.h  linker_debug.h  linker_format.c  linker_format.h  main.c  rt.c  types.h
CustomLoader/app/: build.gradle
CustomLoader/app/src/main/java/com/example/memloadertest/: MainActivity.java
CustomLoader/app/src/main/res/layout/: activity_main.xml
CustomLoader/app/src/main/res/values/: strings.xml
CustomLoader/gradle/wrapper/: gradle-wrapper.properties
CustomSoLoader/app/: CMakeLists.txt  build.gradle
CustomSoLoader/app/src/androidTest/java/com/example/memloadertest/: ExampleInstrumentedTest.java
CustomSoLoader/app/src/main/: AndroidManifest.xml
CustomSoLoader/app/src/main/cpp/: XorUtils.c  XorUtils.h  auxvec.h  elf-em.h  elf_arm_const.h  exec.h  linker4_4.c  linker4_4.h  linker7_0.c  linker7_0.h  native-lib.c  public.h  sys_dlopen.h
CustomSoLoader/app/src/main/java/com/example/memloadertest/: CustomTextView.java  MainActivity.java  RingView.java
CustomSoLoader/app/src/main/res/layout/: activity_main.xml
CustomSoLoader/app/src/main/res/values/: strings.xml
CustomSoLoader/app/src/test/java/com/example/memloadertest/: ExampleUnitTest.java
CustomSoLoader/gradle/wrapper/: gradle-wrapper.properties
ShellUtil/: Encryption.c  Encryption.h  Utils.c  Utils.h  elf-em.h  elf.h  exec_elf.h  log.h  main.c
